--- a/.github/workflows/run_private_code.yml
+++ b/.github/workflows/run_private_code.yml
@@ -1,7 +1,11 @@
 name: run-private-code
 
 on:
-  
+  schedule:
+    - cron: "0 3 * * *"   # chạy 10h sáng VN hằng ngày (08:00 UTC)
+    - cron: "0 9 * * *"   # chạy 4h chiều VN hằng ngày (08:00 UTC)
+    - cron: "0 15 * * *"   # chạy 10h tối  VN hằng ngày (08:00 UTC)
+    
   workflow_dispatch: {}
 
 
