--- a/.github/workflows/run_private_code.yml
+++ b/.github/workflows/run_private_code.yml
@@ -20,6 +20,10 @@ jobs:
       YT_CLIENT_SECRET: ${{ secrets.YT_CLIENT_SECRET }}
       YT_REFRESH_TOKEN: ${{ secrets.YT_REFRESH_TOKEN }}
       
+      # chon thumb tieude bat dau
+      SEQ_BASE_RUN: "46"
+      TITLE_START: "1"
+      THUMB_START: "6"
 
     steps:
       - name: Checkout wrapper (repo PUBLIC)
