--- a/.github/workflows/run_private_code.yml
+++ b/.github/workflows/run_private_code.yml
@@ -1,7 +1,9 @@
 name: run-private-code
 
 on:
-  
+  schedule:
+    - cron: "0 23 * * *"  # chạy 4h sáng 
+    - cron: "0 10 * * *"   # chạy 10h sáng 
     
     
   workflow_dispatch: {}
